<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.cguee.b0321226.bridge.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnWifiUdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_wifiudp" />

        <Button
            android:id="@+id/btnWifiTcp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_wifitcp" />

        <Button
            android:id="@+id/btnBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_bluetooth" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
