<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.cguee.b0321226.bridge.WifiUdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/wifiudp_edt_ip"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edtTxPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/wifiudp_edt_txport"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtRxPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/wifiudp_edt_rxport"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifiudp_btn_set" />

        <TextView
            android:id="@+id/txvIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="連結IP:" />

        <TextView
            android:id="@+id/txvTxPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="傳送Port:" />

        <TextView
            android:id="@+id/txvRxPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="接收Port:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/console"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
